--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>index</title>
-</head>
-<body>
-    <h1>Mast1n的个人主页</h1>
-    <h1>Hello ~</h1>
-</body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title></title>
+        <style media="screen">
+            * {
+                margin: 0;
+                padding: 0;
+            }
+        </style>
+    </head>
+    <body>
+    </body>
+    <script type="text/javascript">
+        window.location.href="http://www.cnblogs.com/Mast1n";
+    </script>
 </html>
